[package]
name = "pistiflex"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = {version = "1.1.19", features = ["fltk-bundled"]}
fltk-theme = "0.1.8"
strum = "0.21.0"
strum_macros = "0.21.1"
rand = "0.8.4"
spin_sleep = "1.0.0"
